--- a/app/src/main/res/layout/dialog_box_bill.xml
+++ b/app/src/main/res/layout/dialog_box_bill.xml
@@ -32,6 +32,15 @@
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
                     android:layout_centerInParent="true"/>
+
+                <ImageView
+                    android:id="@+id/imgDeleteBill"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_delete"
+                    android:contentDescription="Delete Bill"/>
             </RelativeLayout>
 
             <!-- Middle Section -->
@@ -45,7 +54,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/titledialog"
-
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
 
@@ -63,7 +71,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/categorydbx"
-
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -82,7 +89,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Subcategory"
-
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -101,7 +107,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Vendor"
-
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -120,7 +125,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Amount"
-
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -139,7 +143,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Date"
-
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -158,7 +161,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Repeat"
-
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -177,7 +179,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Comment"
-
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
@@ -196,7 +197,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Attachment"
-
                     android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textColor="@android:color/black" />
