--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="light_gray">#D3D3D3</color>
     <color name="orange">#Fb8500</color>
     <color name="bluedark">#023047</color>
+    <color name="light_background">#FFFFFF</color>
+    <color name="dark_background">#F0F0F0</color>
 </resources>
