--- a/app/src/main/res/menu/top_nav.xml
+++ b/app/src/main/res/menu/top_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:icon="@drawable/ic_account"
+        android:icon="@drawable/ic_alarm"
         app:showAsAction="always"
-        android:title="@string/account"/>
+        android:title="@string/alarm"/>
 </menu>
